# ocpp-cs

./: .dockerignore  .gitignore  .gitmodules  AutoVersion.cmake  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.ru-RU.md  configure  deploy  docker-build.sh  docker-compose.yaml  docker-down.sh  docker-image-rm.sh  docker-logs.sh  docker-up.sh  install.sh  version.h
auto/: daemon  unit.service
cmake/: GenerateVersion.cmake  version.hpp.in
cmake-modules/: AutoVersion.cmake
conf/: auth.conf  default.conf  default.json
conf/auth/: default.json
conf/cp/CP1/: DataTransfer.json  configuration.json
conf/cp/CP2/: configuration.json  configuration.orig
conf/cp/CP201/: configuration.json
conf/cp/CP202/: configuration.json
conf/cp/CP203/: configuration.json
conf/cp/CP204/: configuration.json
conf/cp/CP205/: configuration.json
conf/cp/CP3/: configuration.json
conf/cp/CP4/: configuration.json
conf/cp/CP5/: configuration.json
conf/cp/CP6/: configuration.json
conf/cp/CP7/: configuration.json
conf/cp/CP8/: configuration.json
conf/oauth2/: default.json
conf/schemas/1.6/: CertificateSigned.json  CertificateSignedResponse.json  DeleteCertificate.json  DeleteCertificateResponse.json  ExtendedTriggerMessage.json  ExtendedTriggerMessageResponse.json  GetInstalledCertificateIds.json  GetInstalledCertificateIdsResponse.json  GetLog.json  GetLogResponse.json  InstallCertificate.json  InstallCertificateResponse.json  LogStatusNotification.json  LogStatusNotificationResponse.json  SecurityEventNotification.json  SecurityEventNotificationResponse.json  SignCertificate.json  SignCertificateResponse.json  SignedFirmwareStatusNotification.json  SignedFirmwareStatusNotificationResponse.json  SignedUpdateFirmware.json  SignedUpdateFirmwareResponse.json
conf/sites/: default.json
docker/: CMakeLists.txt  Dockerfile
docker/conf/: default.conf  default.json  sites.conf
docker/conf/cp/CP1/: configuration.json  configuration.orig
docker/conf/cp/CP2/: configuration.json
docker/conf/cp/CP201/: configuration.json
docker/conf/cp/CP202/: configuration.json
docker/conf/cp/CP203/: configuration.json
docker/conf/cp/CP204/: configuration.json
docker/conf/cp/CP3/: configuration.json
docker/conf/cp/CP4/: configuration.json
docker/conf/sites/: default.json
docker/www/: config.js  index.html  manifest.json
docker/www/app/: main.js  router.js  state.js
docker/www/app/components/: app-header.js  command-list.js  command-response.js  json-view.js  log-viewer.js  schema-form.js  station-card.js  station-info.js  station-table.js  stats-bar.js
docker/www/app/data/: ocpp-commands.js
docker/www/app/data/schema/2.0.1/: ChangeAvailability.json  ClearCache.json  DataTransfer.json  GetBaseReport.json  GetLocalListVersion.json  GetReport.json  GetTransactionStatus.json  GetVariables.json  RequestStartTransaction.json  RequestStopTransaction.json  Reset.json  SendLocalList.json  SetVariables.json  TriggerMessage.json  UnlockConnector.json
docker/www/app/pages/: dashboard.js  log.js  station.js
docker/www/app/services/: api.js  station-utils.js  ws-log.js
docker/www/assets/css/: floating-labels.css  fonts.css  prettify.css
docker/www/css/: base.css  components.css  layout.css  log.css  variables.css
docker/www/dashboard/: index.html
docker/www/docs/: api.yaml
docker/www/static/css/: 9.e5f34ac4.chunk.css  main.238f0d7b.chunk.css  main.4d045eef.chunk.css
docker/www/static/js/: 0.79e8b098.chunk.js  10.92646b4a.chunk.js  11.4b11626c.chunk.js  11.5b0a9289.chunk.js  13.40030cd3.chunk.js  22.52ab83a0.chunk.js  23.418470eb.chunk.js  29.3271d939.chunk.js  3.a10e4845.chunk.js  30.41a1ee87.chunk.js  4.be67ea22.chunk.js  7.82e05540.chunk.js
docker/www/static/media/: NoirPro-Bold.24429603.eot  NoirPro-Medium.06d8b758.eot
docker/www/web/: config.js
docs/plans/: 2026-03-15-ocpp-201-pg-integration-design.md  2026-03-15-ocpp-201-pg-integration-plan.md
src/app/: ChargePoint.cpp  ChargePoint.hpp  Header.hpp  Ocpp.cpp  Ocpp.hpp  cs.cpp  cs.hpp  main.cpp  ocpp.cpp  ocpp.hpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Core.hpp  Log.cpp  Log.hpp  Module.cpp  Module.hpp  OCPP.cpp  OCPP.hpp  Process.cpp  Process.hpp
src/lib/jwt-cpp/: jwt.h
src/lib/picojson/: picojson.h
src/modules/: Modules.hpp
src/modules/CentralSystem/: Service.cpp  Service.hpp
src/modules/Helpers/: Helpers.hpp
src/modules/Workers/: Workers.hpp
src/ocpp/: charging_point.cpp  charging_point.hpp  ocpp_codec.hpp  protocol.hpp  schema_registry.cpp  schema_registry.hpp  time_utils.hpp
src/processes/: Processes.hpp
src/processes/CPEmulator/: CPEmulator.cpp  CPEmulator.hpp
src/processes/ChargePoint/: CPClient.cpp  CPClient.hpp  CPEmulator.cpp  CPEmulator.hpp  CPModule.cpp  CPModule.hpp
tests/unit/: test_ocpp_protocol.cpp
www/: asset-manifest.json  config.js  index.html  loader.css  manifest.json  ocpp-css.js  plugme.js
www/assets/css/: docs.css  images.css  main.css  style.css
www/css/: style.css  style.min.css
www/dashboard/: index.html  ocpp.html
www/docs/: api.yaml  index.html
www/error/: 400.html  401.html  404.html  500.html  error.html  index.html
www/error/400/: index.html
www/error/401/: index.html
www/error/404/: index.html
www/error/500/: index.html
www/oauth/: error.html  identifier.html  signup.html
www/oauth/callback/: index.html
www/oauth/identifier/: index.html
www/oauth/pwd/: index.html
www/oauth/signin/: index.html
www/oauth/signup/: index.html
www/static/css/: 12.1e73abb5.chunk.css  12.1e73abb5.chunk.css.map  12.fa0bbe1c.chunk.css  12.fa0bbe1c.chunk.css.map  main.44cb3f11.chunk.css  main.44cb3f11.chunk.css.map  main.607ee029.chunk.css  main.9afd8b09.chunk.css  main.9afd8b09.chunk.css.map  main.ac78018d.chunk.css  main.ac78018d.chunk.css.map
www/static/js/: 0.19ad8a66.chunk.js  0.a7d29c02.chunk.js  0.a7d29c02.chunk.js.map  0.b0d4f913.chunk.js  0.b0d4f913.chunk.js.map  0.b264006c.chunk.js  0.b264006c.chunk.js.map  0.cd0fd887.chunk.js.map  (+357 more)
www/web/: index.html  manifest.json
www/welcome/: index.html
(+68 files in other folders)
